--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "repoz-cli",
-  "version": "0.0.0",
-  "description": "",
+  "name": "repoz",
+  "version": "0.0.1",
+  "description": "Repoz client",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/romajs/repoz-cli.git"
   },
   "author": "@romajs",
   "license": "BSD-2-Clause",
