--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "repoz",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Repoz client",
-  "main": "index.js",
+  "bin": {
+    "repoz" : "./bin/repoz"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,7 +15,7 @@
   "author": "@romajs",
   "license": "BSD-2-Clause",
   "dependencies": {
-    "commander" : "*",
+    "commander" : "~2.9.0",
     "prompt" : "~1.0.0",
     "q" : "~1.4.1"
   }
