--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "repoz",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "homepage" : "http://repoz.dextra.com.br", 
   "description": "Repoz client",
+  "main" : "./lib/repoz.js",
   "bin": {
     "repoz" : "./bin/repoz"
   },
