logs with winstons

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "commander": "~2.9.0",
     "path": "^0.12.7",
     "prompt": "~1.0.0",
-    "q": "~1.4.1"
+    "q": "~1.4.1",
+    "winston": "^2.3.1"
   }
 }
