--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "BSD-2-Clause",
   "dependencies": {
     "commander": "~2.9.0",
+    "crypto": "0.0.3",
     "path": "^0.12.7",
     "prompt": "~1.0.0",
     "q": "~1.4.1",
