--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "repoz-put": "./bin/repoz-put"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -28,5 +28,11 @@
     "prompt": "~1.0.0",
     "q": "~1.4.1",
     "winston": "^2.3.1"
+  },
+  "devDependencies": {
+    "assert": "^1.4.1",
+    "mocha": "^3.2.0",
+    "sinon": "^1.17.7",
+    "stream": "0.0.2"
   }
 }
