--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
     "commander": "^2.9.0",
     "crypto": "0.0.3",
     "path": "^0.12.7",
-    "prompt": "~1.0.0",
-    "q": "~1.4.1",
+    "prompt": "^1.0.0",
+    "q": "^1.4.1",
     "winston": "^2.3.1"
   },
   "devDependencies": {
     "assert": "^1.4.1",
     "mocha": "^3.2.0",
     "sinon": "^1.17.7",
-    "stream": "0.0.2"
+    "stream": "^0.0.2"
   }
 }
