--- a/circle.yml
+++ b/circle.yml
@@ -3,7 +3,7 @@ machine:
     version: 4.2.6
 dependencies:
   override:
-    - npm install --dev
+    - npm install
 test:
   override:
     - npm test
