--- a/circle.yml
+++ b/circle.yml
@@ -4,6 +4,10 @@ machine:
 dependencies:
   override:
     - npm install
+    - npm install codecov
 test:
   override:
     - npm test
+  post:
+    - ./run-coverage
+    - ./node_modules/.bin/codecov
