--- a/circle.yml
+++ b/circle.yml
@@ -4,7 +4,7 @@ machine:
 dependencies:
   override:
     - npm install
-    - npm install codecov
+    - npm install codecov@1.0.1
 test:
   override:
     - npm test
